# modulus-ponens-i18n

./: Cargo.toml  Internationalization - Localization - Translation - Dwy-vest - Divest from the Storm.sublime-workspace  README.md  Your local input - internationalizations for your love - Modulus-Ponens-i18n.sublime-workspace
modulus/: Cargo.toml
modulus-ponens/: Cargo.toml
modulus-ponens/src/: main.rs
modulus/src/: main.rs
ponens/: Cargo.toml
ponens/src/controllers/: mod.rs
src/: lib.rs  main.rs
src/controllers/: ftl_translation_controller.rs  mod.rs  route_index_controller.rs
src/data/: mod.rs  pg_client_interface.rs
src/models/: composite_entity_model.rs  mod.rs
src/processors/: arc_collection_processor.rs
