[package]
name = "dwy-vest"
version = "0.1.0"
edition = "2021"
authors = ["leinadalrus <daniel.david.surla@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "websys_worker_handler"
required-features = ["ssr"]

[dependencies]
bytes = "1.0"
encoding_rs = "0.8.31"
fluent = "0.16.0"
fluent-bundle = "0.15.2"
fluent-fallback = "0.7.0"
fluent-resmgr = "0.0.6"
fluent-syntax = "0.11.0"
futures = { version = "0.3", features = ["std"], default-features = false }
js-sys = "0.3"
lindera = "0.21.0"
log = "0.4"
regex = "1.7.1"
reqwest = { version = "0.11.8", features = ["json"] }
rocket = "0.5.0-rc.2"
serde = { version = "1.0.132", features = ["derive"] }
unic-langid = "0.9.1"
uuid = { version = "1.0.0", features = ["serde"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "HtmlInputElement" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3"
clap = { version = "3.1.7", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]