[package]
name = "modulus-ponens-i18n"
version = "0.1.0"
edition = "2021"
authors = ["leinadalrus <daniel.david.surla@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["modulus", "ponens"]

[[bin]]
name = "modulus-ponens"
path = "modulus-ponens/src/main.rs"

[[bin]]
name = "arc_collection_processor"
path = "src/processors/arc_collection_processor.rs"

[[bin]]
name = "websys_worker_handler"
path = "src/bin/websys_worker_handler.rs"
required-features = ["ssr"]

[[bin]]
name = "mod"
path = "src/bin/mod.rs"

[[bin]]
name = "modulus-ponens-i18n"
path = "src/main.rs"

[dependencies]
js-sys = "0.3"
log = "0.4"
regex = "1.7.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
# async-std + native-tls
# serde's JSON is different in rocket due to interface complexity
# Tokio: tokio + native-tls (OS derived TLS) for security
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0.0", features = ["serde"] }
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"
web-sys = { version = "0.3", features = [ "HtmlInputElement" ] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3"
clap = { version = "4.1.6", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]

[profile.dev.package.sqlx-macros]
opt-level = 3