[package]
name = "modulus-ponens"
version = "0.1.0"
edition = "2021"
authors = ["leinadalrus <daniel.david.surla@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14.0"
select = "0.6.0"
regex = "1.7.1"
reqwest = { version = "0.11.8", features = ["blocking", "cookies", "json"] }