[package]
name = "modulus"
version = "0.1.0"
edition = "2021"
authors = ["leinadalrus <daniel.david.surla@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.15.0"
select = "0.6.0"
serde = "1.0.132"
regex = "1.7.1"
reqwest = "0.11.8"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"