[package]
name = "ponens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
encoding_rs = "0.8.31"
fluent = "0.16.0"
fluent-bundle = "0.15.2"
fluent-fallback = "0.7.0"
fluent-resmgr = "0.0.6"
fluent-syntax = "0.11.0"
futures = { version = "0.3", features = ["std"], default-features = false }
linfa = "0.6.1"
lindera = "0.23.0"
unic-langid = "0.9.1"
whatlang = "0.16.2"